Fixed : Previous layout issues

--- a/src/app/pages/team-list/team-list.module.sass
+++ b/src/app/pages/team-list/team-list.module.sass
@@ -42,6 +42,9 @@ body
   max-width: 1200px
   margin: 0 auto
   padding: 160px 15px 130px
+  overflow-x: hidden
+  @include frameSize(500px)
+    padding: 50px 0
 
   .menuList
     width: 100%
@@ -97,9 +100,11 @@ body
       grid-template-columns: repeat(3, 1fr) !important
     @include frameSize(820px)
       grid-template-columns: repeat(2, 1fr) !important
-      gap: 0
+      gap: 1rem 1.2rem
+      padding: 0 20px
     @include frameSize(500px)
       grid-template-columns: repeat(1, 1fr) !important
+      gap: 1rem 0
 
     .developer.light
       background-color: #f7f6fb
@@ -109,16 +114,11 @@ body
       color: #fff
 
     .developer
-      width: 250px
-      height: 350px
       display: inline-block
       text-align: center
       border-radius: 25px
       margin: 0 auto
-      @include frameSize(1200px)
-        width: 320px
-        height: 450px
-      @include frameSize(820px)
+
       &:hover
         .developer_media
           .hover
@@ -133,30 +133,32 @@ body
       .developer_media
         position: relative
 
+        a
+          display: block
+
         .dev_img
           width: 100%
-          height: 250px
+          height: 100%
           border-radius: 25px
-          @include frameSize(1200px)
-            height: 320px
-        //hover background opacity
+          object-fit: cover
+          @include frameSize(500px)
+            height: 80%
+
         .hover
           position: absolute
           width: 100%
-          height: 250px
+          height: 100%
           border-radius: 25px
           top: 0
           z-index: 9
           // transition: 0.3s
           -webkit-transition: 0.3s
-          @include frameSize(1200px)
-            height: 320px
 
         .dev_social_icons
           width: 160px
           position: absolute
           left: 40px
-          bottom: 5px
+          bottom: 10px
           display: flex
           justify-content: space-between
           align-items: center
@@ -282,6 +284,10 @@ body
 // Carousel
 .carousel
   padding: 0 150px
+  @include frameSize(767px)
+    padding: 0 80px
+  @include frameSize(500px)
+    padding: 0
 
   .carouselItem
     padding: 0 30px
@@ -304,6 +310,7 @@ body
         opacity: 0
         background-color: rgba(91, 131, 205, 0.6)
         transition: 0.3s
+
       &:hover
         .overlay
           opacity: 1
